[package]
name = "crc32-v2"
version = "0.0.5"
edition = "2021"
description = "A port of the CRC-32 algorithm to Rust"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>", "Arlie Davis <arlie.davis@gmail.com>"]
repository = "https://github.com/wiseaidev/crc32-v2"
documentation = "https://docs.rs/crc32-v2"
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
bump2version = "0.1.4"
crc32fast = "1.4.2"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
